--- a/standards/pom.xml
+++ b/standards/pom.xml
@@ -21,20 +21,12 @@
     </parent>
 
     <artifactId>standards</artifactId>
+    <groupId>org.codice.countrycode.standards</groupId>
     <name>Country Code :: Standards</name>
     <packaging>pom</packaging>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.codice.countrycode</groupId>
-                <artifactId>api</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
     <modules>
+        <module>api</module>
         <module>genc</module>
         <module>iso</module>
         <module>fips</module>
